--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.divForm {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display:flex
+}
+.form{
+  background-color: rgb(58, 86, 248);
+  border-radius: 15px;
+  width: 35rem;
+  height: 30rem;
+  justify-content: center;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.input{
+  width: 28rem;
+  justify-content: center;
+  margin-left: 80px;
+  display: flex;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.titulosForm{
+  font-family: 'Indie Flower', cursive;
+font-weight: bold;
+font-size: large;
+width: 15rem;
+
+
+}
+
+@media all and (max-width:756px){
+  .form{
+    width: 98%;
+    margin-top: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .input{
+    margin-left: 11px;
+    width: 20rem;
+   justify-content: center;
   }
+
+  .divForm {
+    justify-content: center;
+    display:flex;
+
+}
 }
